--- a/EcommerceSolution.html
+++ b/EcommerceSolution.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AI-System-Soft | Intelligent & Cyber Secure Solutions</title>
     <!-- FONT AWEOSEOM -->
-    <link rel="shortcut icon" href="Assets/Logo/Favicon.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="Assets/images/Logo/Favicon.PNG" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
@@ -37,7 +37,7 @@
     </a>
     <!-- HOME START -->
     <div id="home1" class="home d-flex  align-items-center">
-<img src="Assets/Banner-Image/banner-img-4.jpg" class="home-img w-100" alt="">
+<img src="Assets/images/Banner-Image/banner-img-4.jpg" class="home-img w-100" alt="">
      
   <!-- NAVBAR -->
     <!-- NAVBAR START -->
@@ -45,7 +45,7 @@
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- Logo -->
         <a class="col-lg-3 col-9" href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
+          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
 
         </a>
 
@@ -145,7 +145,7 @@
         <div class="offcanvas-header">
             <!-- Brand Logo and Close Button -->
             <div class="d-flex justify-content-between w-100 align-items-center">
-                <img src="Assets/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+                <img src="Assets/images/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
 
                 <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas"
                     aria-label="Close">
@@ -188,7 +188,7 @@
                 </p>
             </div>
             <div class="col-12 mx-auto">
-                <img src="Assets/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
+                <img src="Assets/images/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
             </div>
             <!-- Social Media Icons -->
             <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
@@ -209,7 +209,7 @@
   <div class="offcanvas-header container">
     <h5 class="offcanvas-title" id="offcanvasRightLabel">
       <a class="navbar-brand" href="#">
-        <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+        <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
         <!-- Replace with actual logo path -->
       </a>
     </h5>
@@ -406,7 +406,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="Assets/Service-Image/service-img-23.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="Assets/images/Service-Image/service-img-23.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div
@@ -464,7 +464,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="Assets/Service-Image/service-img-21.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="Assets/images/Service-Image/service-img-21.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div
@@ -520,7 +520,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="Assets/Service-Image/service-img-22.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="Assets/images/Service-Image/service-img-22.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div
@@ -606,7 +606,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="Assets/Service-Image/service-img-24.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="Assets/images/Service-Image/service-img-24.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div
@@ -910,7 +910,7 @@
     <div class="container-fluid px-4 py-3">
       <div class="row">
         <div class="col-lg-3  col-12 mb-4">
-                        <img src="Assets/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+                        <img src="Assets/images/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
           <p class="locte text-white fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent Solutions</p>
           <!-- <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p> -->
