--- a/buoylight.html
+++ b/buoylight.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- FONT AWEOSEOM -->
-  <link rel="shortcut icon" href="Assets/Logo/Favicon.PNG" type="image/x-icon">
+  <link rel="shortcut icon" href="Assets/images/Logo/Favicon.PNG" type="image/x-icon">
   <!-- FONT AWEOSEOM -->
 
   <!-- EXTERNEL CSS FILE -->
@@ -41,14 +41,14 @@
 
   <!-- MAIN 1 START -->
   <div class="container-fluid  mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/Banner-Image/banner-img-11.png" class="m-0 p-0 w-100 position-absolute h20 " alt="">
+    <img src="Assets/images/Banner-Image/banner-img-11.png" class="m-0 p-0 w-100 position-absolute h20 " alt="">
     <!-- NAVBAR START -->
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- Logo -->
         <a class="col-lg-3 col-9" href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
+          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
 
         </a>
 
@@ -136,7 +136,7 @@
     <div class="offcanvas-header">
       <!-- Brand Logo and Close Button -->
       <div class="d-flex justify-content-between w-100 align-items-center">
-        <img src="Assets/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+        <img src="Assets/images/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
 
         <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas"
           aria-label="Close">
@@ -179,7 +179,7 @@
         </p>
       </div>
       <div class="col-12 mx-auto">
-        <img src="Assets/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
+        <img src="Assets/images/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
       </div>
       <!-- Social Media Icons -->
       <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
@@ -200,7 +200,7 @@
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasRightLabel">
         <a class="navbar-brand" href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
           <!-- Replace with actual logo path -->
         </a>
       </h5>
@@ -280,12 +280,12 @@
 
       </ul>
       <div class="col-12 d-flex flex-column px-2 pb-5 product-img">
-        <img src="Assets/Service-Image/service-img-06.jpg" class="border-radious img-fluid ser-img-1 " alt="">
+        <img src="Assets/images/Service-Image/service-img-06.jpg" class="border-radious img-fluid ser-img-1 " alt="">
         <div class="line px-2"></div>
       </div>
       <!--  -->
       <div class="col-12 d-flex flex-column px-2 pb-5">
-        <img src="Assets/Service-Image/service-img-10.jpg" class="border-radious img-fluid  ser-img-1" alt="">
+        <img src="Assets/images/Service-Image/service-img-10.jpg" class="border-radious img-fluid  ser-img-1" alt="">
         <h5 class="text-white1 pt-3">How Can We Help</h5>
         <p class="text-white1 fw-light">If you need any helps, please feel free to contact us.</p>
         <span class="text-white1 mt-1"><i class="fa fa-phone pe-2 text-white1"></i>+1 (689) 276-4636</span>
@@ -314,7 +314,7 @@
     <div class="col-lg-9 ps-lg-3 mt-lg-0 mt-2">
       <span></span>
       <!--  -->
-      <img src="Assets/Service-Image/service-img-13.jpg" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
+      <img src="Assets/images/Service-Image/service-img-13.jpg" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
       <!--  -->
       <h2 class="fs-1 pb-3 col-org ">Product</h2>
       <p class="fw-light  fs-5">
@@ -371,8 +371,8 @@
       </p>
 
       <div class="col-12 d-flex justify-content-between">
-        <img src="Assets/Service-Image/service-img-07.jpg" class="border-radious img-fluid col-6 me-2 " alt="">
-        <img src="Assets/Service-Image/service-img-12.jpg" class=" border-radious img-fluid col-6 " alt="">
+        <img src="Assets/images/Service-Image/service-img-07.jpg" class="border-radious img-fluid col-6 me-2 " alt="">
+        <img src="Assets/images/Service-Image/service-img-12.jpg" class=" border-radious img-fluid col-6 " alt="">
 
 
       </div>
@@ -454,11 +454,11 @@
     <h6>Our Trusted Partner</h6>
     <marquee width="100%" direction="left" class="py-5" height="100px" scrollamount="10">
 
-      <img src="Assets/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
 
-      <img src="Assets/Partner-Image/partner-02.png" class="img-fluid mx-5 px-5" alt="">
-      <img src="Assets/Partner-Image/partner-03.png" class="img-fluid mx-5 px-5" alt="">
-      <img src="Assets/Partner-Image/partner-04.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-02.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-03.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-04.png" class="img-fluid mx-5 px-5" alt="">
     </marquee>
     <h6 class="float-end mt-3">Almost 20+ Partner we have</h6>
   </div>
@@ -470,7 +470,7 @@
     <div class="container-fluid px-4 py-3">
       <div class="row">
         <div class="col-lg-3  col-12 mb-4">
-          <img src="Assets/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+          <img src="Assets/images/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
           <p class="locte text-white fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
             Solutions</p>
