--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- FONT AWEOSEOM -->
-  <link rel="shortcut icon" href="Assets/Logo/Favicon.PNG" type="image/x-icon">
+  <link rel="shortcut icon" href="Assets/images/Logo/Favicon.PNG" type="image/x-icon">
   <!-- FONT AWEOSEOM -->
 
   <!-- EXTERNEL CSS FILE -->
@@ -43,14 +43,14 @@
 
 <!-- MAIN 1 START -->
 <div class="container-fluid main1 mb-5 d-flex flex-column align-items-center justify-content-center">
-  <img src="Assets/Banner-Image/banner-img-17.jpg" class="m-0 p-0 w-100 position-absolute banner-img" alt="">
+  <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="m-0 p-0 w-100 position-absolute banner-img" alt="">
 <!-- NAVBAR START -->
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- Logo -->
         <a class="col-lg-3 col-9" href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
+          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
 
         </a>
 
@@ -138,7 +138,7 @@
     <div class="offcanvas-header">
       <!-- Brand Logo and Close Button -->
       <div class="d-flex justify-content-between w-100 align-items-center">
-        <img src="Assets/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+        <img src="Assets/images/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
 
         <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas" aria-label="Close">
           <i class="fa fa-window-close bg text-white fs-5 p-2 rounded-circle" aria-hidden="true"></i>
@@ -180,7 +180,7 @@
         </p>
       </div>
   <div class="col-12 mx-auto">
-<img src="Assets/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
+<img src="Assets/images/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
   </div>
       <!-- Social Media Icons -->
       <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
@@ -201,7 +201,7 @@
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasRightLabel">
         <a class="navbar-brand" href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
           <!-- Replace with actual logo path -->
         </a>
       </h5>
@@ -394,11 +394,11 @@
     <h6>Our Trusted Partner</h6>
     <marquee width="100%" direction="left" class="py-5" height="100px" scrollamount="10">
 
-      <img src="Assets/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
 
-      <img src="Assets/Partner-Image/partner-02.png" class="img-fluid mx-5 px-5" alt="">
-      <img src="Assets/Partner-Image/partner-03.png" class="img-fluid mx-5 px-5" alt="">
-      <img src="Assets/Partner-Image/partner-04.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-02.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-03.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-04.png" class="img-fluid mx-5 px-5" alt="">
     </marquee>
     <h6 class="float-end mt-3">Almost 20+ Partner we have</h6>
   </div>
@@ -410,7 +410,7 @@
     <div class="container-fluid px-4 py-3">
       <div class="row">
         <div class="col-lg-3  col-12 mb-4">
-                        <img src="Assets/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+                        <img src="Assets/images/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
           <p class="locte text-white fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent Solutions</p>
           <!-- <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p> -->
