--- a/getqoutes.html
+++ b/getqoutes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FONT AWEOSEOM -->
-    <link rel="shortcut icon" href="Assets/Logo/Favicon.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="Assets/images/Logo/Favicon.PNG" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
   
     <!-- EXTERNEL CSS FILE -->
@@ -42,7 +42,7 @@
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- Logo -->
         <a class="col-lg-3 col-9" href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
+          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
 
         </a>
 
@@ -118,7 +118,7 @@
     <div class="offcanvas-header">
       <!-- Brand Logo and Close Button -->
       <div class="d-flex justify-content-between w-100 align-items-center">
-        <img src="Assets/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+        <img src="Assets/images/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
 
         <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas" aria-label="Close">
           <i class="fa fa-window-close bg text-white fs-5 p-2 rounded-circle" aria-hidden="true"></i>
@@ -160,7 +160,7 @@
         </p>
       </div>
   <div class="col-12 mx-auto">
-<img src="Assets/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
+<img src="Assets/images/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
   </div>
       <!-- Social Media Icons -->
       <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
@@ -180,7 +180,7 @@
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasRightLabel">
         <a class="navbar-brand" href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
           <!-- Replace with actual logo path -->
         </a>
       </h5>
