--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- FONT AWEOSEOM -->
-  <link rel="shortcut icon" href="Assets/Logo/Favicon.PNG" type="image/x-icon">
+  <link rel="shortcut icon" href="Assets/images/Logo/Favicon.PNG" type="image/x-icon">
   <!-- FONT AWEOSEOM -->
   <title>AI-System-Soft | Intelligent & Cyber Secure Solutions</title>
   <!-- EXTERNEL CSS FILE -->
@@ -41,13 +41,13 @@
 
   <!-- MAIN 1 START -->
   <div class="container-fluid main1 mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/Banner-Image/main_banner.png" class="m-0 p-0 w-100 position-absolute banner-img" alt="">
+    <img src="Assets/images/Banner-Image/main_banner.png" class="m-0 p-0 w-100 position-absolute banner-img" alt="">
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- Logo -->
         <a class="col-lg-3 col-9" href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
+          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
 
         </a>
 
@@ -201,7 +201,7 @@
     <div class="offcanvas-header">
       <!-- Brand Logo and Close Button -->
       <div class="d-flex justify-content-between w-100 align-items-center">
-        <img src="Assets/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+        <img src="Assets/images/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
         <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas"
           aria-label="Close">
           <i class="fa fa-window-close bg text-white1 fs-5 p-2 rounded-circle" aria-hidden="true"></i>
@@ -243,7 +243,7 @@
         </p>
       </div>
       <div class="col-12 mx-auto">
-        <img src="Assets/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
+        <img src="Assets/images/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
       </div>
       <!-- Social Media Icons -->
       <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
@@ -264,7 +264,7 @@
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasRightLabel">
         <a class="navbar-brand" href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
           <!-- Replace with actual logo path -->
         </a>
       </h5>
@@ -355,7 +355,7 @@
   <div class="container-fluid who d-flex flex-lg-row flex-column py-5 my-5 m-0">
 
     <div class="col-lg-3 col-md-6 col-12  p-1 text-white1 d-flex flex-row align-items-center">
-      <img src="Assets/Pictures/pic.webp" class="img-fluid col-12 h-100  rounded-3" alt="">
+      <img src="Assets/images/Pictures/pic.webp" class="img-fluid col-12 h-100  rounded-3" alt="">
     </div>
     <div class="col-lg-5 ps-lg-3 col-md-6 col-12 d-flex flex-row align-items-center">
       <h2 class="display-5 fw-normal col-lg-9 text-white1"><span class="num">30</span>+ Year Expericence Team</h2>
@@ -609,10 +609,10 @@
 
     <div class="container d-flex flex-lg-row flex-column py-5 gth">
       <div class="col-lg-3 me-3 rounded-3">
-        <img src="Assets/Pictures/why-pic-1.jpg" class="img-fluid col-12" alt="">
+        <img src="Assets/images/Pictures/why-pic-1.jpg" class="img-fluid col-12" alt="">
       </div>
       <div class="col-lg-3 mt-4">
-        <img src="Assets/Pictures/why-pic-2.png" class="img-fluid col-12" alt="">
+        <img src="Assets/images/Pictures/why-pic-2.png" class="img-fluid col-12" alt="">
 
       </div>
       <div class="col-lg-6 col-12 ms-lg-5 d-flex flex-column justify-content-center">
@@ -787,11 +787,11 @@
     <h6>Our Trusted Partner</h6>
     <marquee width="100%" direction="left" class="py-5" height="100px" scrollamount="10">
 
-      <img src="Assets/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
 
-      <img src="Assets/Partner-Image/partner-02.png" class="img-fluid mx-5 px-5" alt="">
-      <img src="Assets/Partner-Image/partner-03.png" class="img-fluid mx-5 px-5" alt="">
-      <img src="Assets/Partner-Image/partner-04.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-02.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-03.png" class="img-fluid mx-5 px-5" alt="">
+      <img src="Assets/images/Partner-Image/partner-04.png" class="img-fluid mx-5 px-5" alt="">
     </marquee>
     <h6 class="float-end mt-3">Almost 20+ Partner we have</h6>
   </div>
@@ -799,11 +799,12 @@
   <!-- OUR PARTNER END-->
   <!-- FOOTER -->
 
-  <footer class=" pt-5">
-    <div class="container-fluid px-4 py-3">
+  <footer class=" footer pt-5">
+
+    <div class="container-fluid footer-content px-4 py-3">
       <div class="row">
         <div class="col-lg-3  col-12 mb-4">
-          <img src="Assets/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+          <img src="Assets/images/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
           <p class="locte text-white1 fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
             Solutions</p>
@@ -877,15 +878,7 @@
   <!-- EXTERNEL JS FILE -->
   <script src="JS/app.js"></script>
   <!-- EXTERNEL JS FILE -->
-  <script>
-    const input = document.querySelector(".phonenum");
 
-    window.intlTelInput(input, {
-      initialCountry: "us",
-      separateDialCode: true,
-      utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js", // For formatting
-    });
-  </script>
 </body>
 
 </html>
