--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AI Product Solution | Intelligent & Cyber Secure Solutions</title>
     <!-- FONT AWEOSEOM -->
-    <link rel="shortcut icon" href="Assets/Logo/Favicon.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="Assets/images/Logo/Favicon.PNG" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
@@ -37,13 +37,13 @@
     </a>
     <!-- HOME START -->
     <div id="home1" class="home d-flex flex-column justify-content-center  align-items-center ">
-<img src="Assets/Banner-Image/banner-img-17.jpg" class="home-img w-100" alt="">
+<img src="Assets/images/Banner-Image/banner-img-17.jpg" class="home-img w-100" alt="">
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- Logo -->
         <a class="col-lg-3 col-9" href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
+          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
 
         </a>
 
@@ -143,7 +143,7 @@
         <div class="offcanvas-header">
             <!-- Brand Logo and Close Button -->
             <div class="d-flex justify-content-between w-100 align-items-center">
-                <img src="Assets/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+                <img src="Assets/images/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
 
                 <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas"
                     aria-label="Close">
@@ -186,7 +186,7 @@
                 </p>
             </div>
             <div class="col-12 mx-auto">
-                <img src="Assets/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
+                <img src="Assets/images/Pictures/exp-img-1.png" class="img-fluid col-12" alt="">
             </div>
             <!-- Social Media Icons -->
             <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
@@ -208,7 +208,7 @@
   <div class="offcanvas-header container">
     <h5 class="offcanvas-title" id="offcanvasRightLabel">
       <a class="navbar-brand" href="#">
-        <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+        <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
         <!-- Replace with actual logo path -->
       </a>
     </h5>
@@ -405,7 +405,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="Assets/Service-Image/service-img-06.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="Assets/images/Service-Image/service-img-06.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div
@@ -465,7 +465,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="Assets/Service-Image/service-img-07.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="Assets/images/Service-Image/service-img-07.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div
@@ -523,7 +523,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="Assets/Service-Image/service-img-08.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="Assets/images/Service-Image/service-img-08.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div
@@ -609,7 +609,7 @@
                             to the system in Natural Language. </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="Assets/Service-Image/service-img-09.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="Assets/images/Service-Image/service-img-09.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div
@@ -694,7 +694,7 @@
                             An AI & Most Modern GIS Technologies based solution to analyze satellite imagery in unprecedented ways to derive various demographic and social metrics for a given location. Count objects & features, classify a city into different settlement types e.g. Apartment vs Villas vs Small Homes, Slums Vs Planned Settled areas, residential Vs industrial. Analyze Agriculture Land and Crop, Analysis of Land utilization Parks Vs Sports Fields Vs Water Ways. </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="Assets/Service-Image/service-img-09.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="Assets/images/Service-Image/service-img-09.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div
@@ -930,7 +930,7 @@
         <div class="container-fluid px-4 py-3">
             <div class="row">
                 <div class="col-lg-3  col-12 mb-4">
-                    <img src="Assets/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+                    <img src="Assets/images/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
                     <p class="locte text-white fs-6 ">AI-GRC-Software Development Solution . We Develop Secure &
                         Intelligent Solutions</p>
