--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -43,7 +43,7 @@
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- Logo -->
         <a class="col-lg-3 col-9" href="#">
-          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
+          <img src="Assets/images/Logo/light_logo.png" alt="Logo" class="col-lg-3 col-2 " />
 
         </a>
 
@@ -143,7 +143,7 @@
         <div class="offcanvas-header">
             <!-- Brand Logo and Close Button -->
             <div class="d-flex justify-content-between w-100 align-items-center">
-                <img src="Assets/images/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+                <img src="Assets/images/Logo/light_logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
 
                 <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas"
                     aria-label="Close">
@@ -208,7 +208,7 @@
   <div class="offcanvas-header container">
     <h5 class="offcanvas-title" id="offcanvasRightLabel">
       <a class="navbar-brand" href="#">
-        <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+        <img src="Assets/images/Logo/light_logo.png" alt="Logo" class="col-lg-2 col-2" />
         <!-- Replace with actual logo path -->
       </a>
     </h5>
@@ -677,7 +677,7 @@
             </div>
 
             <div class="col-lg-12 col-md-12 d-flex flex-lg-row flex-column cardsss py-4 mb-2">
-                <h3 class="text-white1 pe-2 mt-lg-2 col-lg-2 px-2 text-center ">04.</h3>
+                <h3 class="text-white1 pe-2 mt-lg-2 col-lg-2 px-2 text-center ">05.</h3>
                 <div class="d-flex text-white1 flex-column col-lg-6 col-12">
                     <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">planetSCAN <sup
                             class="col-org">TM</sup> </h2>
@@ -694,7 +694,7 @@
                             An AI & Most Modern GIS Technologies based solution to analyze satellite imagery in unprecedented ways to derive various demographic and social metrics for a given location. Count objects & features, classify a city into different settlement types e.g. Apartment vs Villas vs Small Homes, Slums Vs Planned Settled areas, residential Vs industrial. Analyze Agriculture Land and Crop, Analysis of Land utilization Parks Vs Sports Fields Vs Water Ways. </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="Assets/images/Service-Image/service-img-09.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="Assets/images/Service-Image/service-img-25.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div
@@ -930,7 +930,7 @@
         <div class="container-fluid px-4 py-3">
             <div class="row">
                 <div class="col-lg-3  col-12 mb-4">
-                    <img src="Assets/images/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+                    <img src="Assets/images/Logo/light_logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
                     <p class="locte text-white fs-6 ">AI-GRC-Software Development Solution . We Develop Secure &
                         Intelligent Solutions</p>
