--- a/getqoutes.html
+++ b/getqoutes.html
@@ -42,7 +42,7 @@
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- Logo -->
         <a class="col-lg-3 col-9" href="#">
-          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
+          <img src="Assets/images/Logo/light_logo.png" alt="Logo" class="col-lg-3 col-2 " />
 
         </a>
 
@@ -118,7 +118,7 @@
     <div class="offcanvas-header">
       <!-- Brand Logo and Close Button -->
       <div class="d-flex justify-content-between w-100 align-items-center">
-        <img src="Assets/images/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+        <img src="Assets/images/Logo/light_logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
 
         <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas" aria-label="Close">
           <i class="fa fa-window-close bg text-white fs-5 p-2 rounded-circle" aria-hidden="true"></i>
@@ -180,7 +180,7 @@
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasRightLabel">
         <a class="navbar-brand" href="#">
-          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+          <img src="Assets/images/Logo/light_logo.png" alt="Logo" class="col-lg-2 col-2" />
           <!-- Replace with actual logo path -->
         </a>
       </h5>
