--- a/plannet_scan.html
+++ b/plannet_scan.html
@@ -48,7 +48,7 @@
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- Logo -->
         <a class="col-lg-3 col-9" href="#">
-          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
+          <img src="Assets/images/Logo/light_logo.png" alt="Logo" class="col-lg-3 col-2 " />
 
         </a>
 
@@ -136,7 +136,7 @@
     <div class="offcanvas-header">
       <!-- Brand Logo and Close Button -->
       <div class="d-flex justify-content-between w-100 align-items-center">
-        <img src="Assets/images/Logo/logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+        <img src="Assets/images/Logo/light_logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
 
         <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas"
           aria-label="Close">
@@ -200,7 +200,7 @@
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasRightLabel">
         <a class="navbar-brand" href="#">
-          <img src="Assets/images/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+          <img src="Assets/images/Logo/light_logo.png" alt="Logo" class="col-lg-2 col-2" />
           <!-- Replace with actual logo path -->
         </a>
       </h5>
@@ -470,7 +470,7 @@
     <div class="container-fluid px-4 py-3">
       <div class="row">
         <div class="col-lg-3  col-12 mb-4">
-          <img src="Assets/images/Logo/logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+          <img src="Assets/images/Logo/light_logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
           <p class="locte text-white fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
             Solutions</p>
