--- a/buoylight.html
+++ b/buoylight.html
@@ -6,7 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- FONT AWEOSEOM -->
-  <link rel="shortcut icon" href="Assets/images/Logo/Favicon.PNG" type="image/x-icon">
+   <link rel="shortcut icon" href="Assets/images/Logo/Ai-SS-Logo.png" type="image/x-icon">
+
   <!-- FONT AWEOSEOM -->
 
   <!-- EXTERNEL CSS FILE -->
@@ -79,9 +80,7 @@
                   </a></li>
                 <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
                 <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
-                <li><a class="dropdown-item nav-link" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
-                <li><a class="dropdown-item nav-link" href="DigitalMarketing.html">
-                    Digital Marketing</a></li>
+
 
               </ul>
             </li>
