--- a/schedulemeeting.html
+++ b/schedulemeeting.html
@@ -6,7 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- FONT AWEOSEOM -->
-  <link rel="shortcut icon" href="Assets/images/Logo/Favicon.PNG" type="image/x-icon">
+   <link rel="shortcut icon" href="Assets/images/Logo/Ai-SS-Logo.png" type="image/x-icon">
+
   <!-- FONT AWEOSEOM -->
 
   <!-- EXTERNEL CSS FILE -->
