--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -38,7 +38,7 @@
     </a>
     <!-- HOME START -->
     <div id="home1" class="home d-flex flex-column justify-content-center  align-items-center ">
-<img src="Assets/images/Banner-Image/banner-img-17.jpg" class="home-img w-100" alt="">
+<img src="Assets/images/Banner-Image/banner-img-17.jpg" class="home-img w-100 h20" alt="">
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
