--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
   <!-- TOP -->
   <!-- NAVBAR -->
 
-  <div class="container-fluid main1 mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="m-0 p-0 w-100 position-absolute banner-img" alt="">
+  <div class="container-fluid main1 home mb-5 d-flex flex-column align-items-center justify-content-center">
+    <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="home-img  m-0 p-0 w-100 position-absolute banner-img" alt="">
   <!-- NAVBAR START -->
       <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
