--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
 
   <!-- MAIN 1 START -->
-  <div class="container-fluid main1 mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/images/Banner-Image/main_banner.png" class="m-0 p-0 w-100 position-absolute banner-img" alt="">
+  <div class="container-fluid main1 mb-5 home d-flex flex-column align-items-center justify-content-center">
+    <img src="Assets/images/Banner-Image/main_banner.png" class="m-0 home-im p-0 w-100 position-absolute banner-img banner-img-home" alt="">
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
