--- a/contact.html
+++ b/contact.html
@@ -388,7 +388,7 @@
 
   <!-- OUR PARTNER START-->
   <div class="container roun my-5 ">
-    <h6>Our Trusted Partner</h6>
+    <h6>Our Major Product</h6>
     <marquee width="100%" direction="left" class="py-5" height="100px" scrollamount="10">
 
       <img src="Assets/images/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
