--- a/plannet_scan.html
+++ b/plannet_scan.html
@@ -42,7 +42,7 @@
 
   <!-- MAIN 1 START -->
   <div class="container-fluid  mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/images/Banner-Image/banner-img-11.png" class="m-0 p-0 w-100 position-absolute h20 " alt="">
+    <img src="Assets/images/Banner-Image/banner-img-22.png" class="m-0 p-0 w-100 position-absolute h20 " alt="">
     <!-- NAVBAR START -->
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
@@ -121,8 +121,8 @@
     <!-- MAIN SUB DIV START -->
     <!-- BANNER START -->
     <div class="container-fluid home d-flex flex-column align-items-center justify-content-center  h20 pb-0">
-      <h2 class="text-white mb-3 display-2 fw-bold">BuoyLIGHT<sup class="col-org">TM</sup> </h2>
-      <h4 class="text-white  ">Home / BuoyLIGHT </h4>
+      <h2 class="text-white mb-3 display-2 fw-bold">plannetScam<sup class="col-org">TM</sup> </h2>
+      <h4 class="text-white  ">Home / plannetScam </h4>
     </div>
     <!-- BANNER END -->
 
@@ -272,7 +272,8 @@
       <h3 class="text-white1 px-2 py-3">AI Product Solution</h3>
       <!--  -->
       <ul class="list-unstyled px-2">
-        <li class="fs-5 text-white1 mb-3"><a href="buoylight.html" class="text-white1 text-decoration-none">buoyLIGHT
+        <li class="fs-5 text-white1 mb-3"><a href="plannet_scan.html" class="text-white1 text-decoration-none">plannetScam
+
             <sup class="col-org">TM</sup></a></li>
 
 
@@ -449,7 +450,7 @@
   <!-- FORM -->
   <!-- OUR PARTNER START-->
   <div class="container roun my-5 ">
-    <h6>Our Trusted Partner</h6>
+    <h6>Our Major Product</h6>
     <marquee width="100%" direction="left" class="py-5" height="100px" scrollamount="10">
 
       <img src="Assets/images/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
