--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
 
   <!-- MAIN 1 START -->
-  <div class="container-fluid main1 mb-5 home d-flex flex-column align-items-center justify-content-center">
+  <div class="container-fluid main1 mb-5 home d-flex flex-column align-items-center justify-content-center"> 
+
     <img src="Assets/images/Banner-Image/main_banner.png" class="m-0 home-im p-0 w-100 position-absolute banner-img banner-img-home" alt="">
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
@@ -746,7 +747,7 @@
 
   <!-- OUR PARTNER START-->
   <div class="container roun my-5 ">
-    <h6>Our Trusted Partner</h6>
+    <h6>Our Major Product</h6>
     <marquee width="100%" direction="left" class="py-5" height="100px" scrollamount="10">
 
       <img src="Assets/images/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
