--- a/index.html
+++ b/index.html
@@ -756,10 +756,10 @@
       <img src="Assets/images/Partner-Image/partner-03.png" class="img-fluid mx-5 px-5" alt="">
       <img src="Assets/images/Partner-Image/partner-04.png" class="img-fluid mx-5 px-5" alt="">
     </marquee>
-    <h6 class="float-end mt-3">Almost 20+ Partner we have</h6>
+    <h6 class="float-end mt-3">Almost 20+ Product we have</h6>
   </div>
 
-  <!-- OUR PARTNER END-->
+  <!-- OUR PARTNER END--> 
   <!-- FOOTER -->
 
   <footer class=" footer pt-5">
