--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 
 <!-- MAIN 1 START -->
 <div class="container-fluid main1 mb-5 d-flex flex-column align-items-center justify-content-center">
-  <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="m-0 p-0 w-100 position-absolute banner-img" alt="">
+  <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="m-0 p-0 w-100 position-absolute banner-img home-img" alt="">
 <!-- NAVBAR START -->
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
