--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
   <!-- NAVBAR -->
 
   <div class="container-fluid main1 mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/images/Banner-Image/banner-img-18.jpg" class="m-0 p-0 w-100 position-absolute banner-img" alt="">
+    <img src="Assets/images/Banner-Image/banner-img-18.jpg" class="m-0 p-0 w-100 home-img position-absolute banner-img" alt="">
   <!-- NAVBAR START -->
       <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
