--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!-- MAIN 1 START -->
   <div class="container-fluid main1 mb-5 home d-flex flex-column align-items-center justify-content-center"> 
 
-    <img src="Assets/images/Banner-Image/main_banner.png" class="m-0 home-im p-0 w-100 position-absolute banner-img banner-img-home" alt="">
+    <img src="Assets/images/Banner-Image/banner-img-25.png" class="m-0 home-im p-0 w-100 position-absolute banner-img banner-img-home" alt="">
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
@@ -122,7 +122,7 @@
     <div class="d-flex flex-column justify-content-center align-items-center">
       <div class="col-xxl-12 col-xl-12 col-12 mx-auto d-flex justify-content-lg-center flex-column pt-5 ">
         <div class="d-flex  text-white col-12 flex-row justify-content-lg-center pt-5 ">
-          <p class="pe-5 ">Welcome Everyone - We are Available at your Service <svg xmlns="http://www.w3.org/2000/svg"
+          <p class="pe-5 fs-5 fw-bold">Welcome Everyone - We are Available at your Service <svg xmlns="http://www.w3.org/2000/svg"
               width="50" class="arr" height="6" viewBox="0 0 50 6">
               <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
             </svg>
@@ -147,9 +147,9 @@
             </svg></span>
         </div>
 
-        <h2 class="display-1 text-white1 fw-normal text-lg-center head-1 col-lg-12 col-xxl-12 col-xl-12 col-12 mx-auto">
-          AI-GRC-Software
-          <span class="str">Development <span class="str">Solution Company</span> </span>.
+        <h2 class="display-1 text-white fw-bolder text-lg-center head-1 col-lg-12 col-xxl-12 col-xl-12 col-12 mx-auto">
+          AI-GRC-Software 
+        Development Solution Company <span class="col-org">.</span>
         </h2>
 
         <p class="text-lg-center py-3 text-white fw-normal">We Develop Secure & Intelligent Solutions </p>
@@ -178,13 +178,13 @@
 
 
           </div>
-          <div class="col-lg-4 d-flex flex-column align-items-end col-12 text-end py-lg-0 py-3">
-            <p class="color-black text-capitalize fw-normal">
+          <div class="col-lg-5 d-flex flex-column align-items-end col-12 text-end py-lg-0 py-3">
+            <p class="color-black text-capitalize fs-6 fw-light">
               AI-System-Soft Provide business solutions pertain to the <span class="fw-bolder">GRC (Governance, Risk,
                 and
                 Compliance)</span> AI driven software, application & development and information security Solutions.
             </p>
-            <p class="pb-g p-2 col-6 rounded-3 bg">
+            <p class="pb-g p-2 col-5 rounded-3 bg">
               Cleint Satisfaction - 90%
             </p>
 
