--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
 
         <h2 class="display-1 text-white fw-bolder text-lg-center head-1 col-lg-12 col-xxl-12 col-xl-12 col-12 mx-auto">
           AI-GRC-Software 
-        Development Solution Company <span class="col-org">.</span>
+        Development <span class="text-eni">
+          <span class="text-ani-child">Solution Company</span>
+          Solution Company
+      </span><span class="col-org">.</span>
         </h2>
 
         <p class="text-lg-center py-3 text-white fw-normal">We Develop Secure & Intelligent Solutions </p>
