--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 
 
   <!-- MAIN 1 START -->
-  <div class="container-fluid main1 mb-5 home d-flex flex-column align-items-center justify-content-center"> 
+  <div class="container-fluid main1 mb-5 home d-flex flex-column align-items-center justify-content-center">
 
-    <img src="Assets/images/Banner-Image/banner-img-25.png" class="m-0 home-im p-0 w-100 position-absolute banner-img banner-img-home" alt="">
+    <img src="Assets/images/Banner-Image/banner-img-25.png"
+      class="m-0 home-im p-0 w-100 position-absolute banner-img banner-img-home" alt="">
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
@@ -122,8 +123,8 @@
     <div class="d-flex flex-column justify-content-center align-items-center">
       <div class="col-xxl-12 col-xl-12 col-12 mx-auto d-flex justify-content-lg-center flex-column pt-5 ">
         <div class="d-flex  text-white col-12 flex-row justify-content-lg-center pt-5 ">
-          <p class="pe-5 fs-5 fw-bold">Welcome Everyone - We are Available at your Service <svg xmlns="http://www.w3.org/2000/svg"
-              width="50" class="arr" height="6" viewBox="0 0 50 6">
+          <p class="pe-5 fs-5 fw-bold">Welcome Everyone - We are Available at your Service <svg
+              xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6" viewBox="0 0 50 6">
               <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
             </svg>
           </p>
@@ -148,11 +149,11 @@
         </div>
 
         <h2 class="display-1 text-white fw-bolder text-lg-center head-1 col-lg-12 col-xxl-12 col-xl-12 col-12 mx-auto">
-          AI-GRC-Software 
-        Development <span class="text-eni">
-          <span class="text-ani-child">Solution Company</span>
-          Solution Company
-      </span><span class="col-org">.</span>
+          AI-GRC-Software
+          Development <span class="text-eni">
+            <span class="text-ani-child">Solution Company</span>
+            Solution Company
+          </span><span class="col-org">.</span>
         </h2>
 
         <p class="text-lg-center py-3 text-white fw-normal">We Develop Secure & Intelligent Solutions </p>
@@ -164,14 +165,10 @@
         <div class="col-lg-12  col-12  d-flex flex-lg-row flex-column justify-content-between mt-lg-0 mt-5">
 
           <div class=" col-lg-2 col-5 d-flex justify-content-center align-items-center flex-column">
-            <button class="banner-btn bg-white text-dark px-3 border-0 rounded-3">
-              <p class="fw-bolder col-org text-center mt-2">Explore Our Services</p>
-              <span class="hoverbanner top-0 left-0 d-flex flex-row justify-content-center align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="text-white1  mt-3" width="12" height="12"
-                  viewBox="0 0 12 12">
-                  <path d="M10.0035 3.40804L1.41153 12L0 10.5885L8.59097 1.99651H1.01922V0H12V10.9808H10.0035V3.40804Z">
-                  </path>
-                </svg>
+            <button class="banner-btn1  ">
+              <span class="banner-btn  ">Explore Our Services</span>
+              <span class="banner-btn-hover ">
+                <a href="AiProductSolution.html"><i class="fa-solid fa-paper-plane col-org"></i></a>
               </span>
             </button>
 
@@ -300,7 +297,7 @@
               <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
               <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
               <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
-            
+
             </ul>
           </li>
 
@@ -720,7 +717,7 @@
               <option value="AI Products & Solutions">AI Products & Solutions</option>
               <option value="GRC Solutions">GRC Solutions</option>
               <option value="Web & App Development">Web & App Development</option>
-            
+
 
             </select>
 
@@ -762,7 +759,7 @@
     <h6 class="float-end mt-3">Almost 20+ Product we have</h6>
   </div>
 
-  <!-- OUR PARTNER END--> 
+  <!-- OUR PARTNER END-->
   <!-- FOOTER -->
 
   <footer class=" footer pt-5">
