--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -309,7 +309,7 @@
                             We empower businesses with advanced AI technologies to streamline operations <span
                                 class="col-org">&</span> unlock new opportunities for growth and innovation.
                         </h2>
-                        <p class="pt-3 fw-lighter col-lg-11">
+                        <p class="pt-3  col-lg-11">
                             What began as a simple idea and a shared dream has evolved into a mission to empower
                             businesses with cutting-edge AI technologies. Since our founding, we've been dedicated to
                             driving innovation, streamlining operations, and enhancing decision-making.
