--- a/about.html
+++ b/about.html
@@ -330,14 +330,16 @@
         <h5 class="text-white1  fs-6 fw-light pe-lg-3 ">
        
 We know that every business does not required the same solutions, therefore, we devise customize and plugged-in
-solutions for your organization that makes you more comfortable and increase the productivity.  
+solutions for your organization that makes you more comfortable and help to increase the productivity.  
 
         </h5>
         <h5 class="text-white1  fs-6 fw-light pe-lg-3  pt-lg-2">
           Since 1993, we are committed to deliver the different project in multinational organizations and provide 
-          our expertise to public (Government) or private sectors and establishing the trust among them.Our solutions 
-          integrate advanced AI System that can work on APIs and  ensuring that businesses can efficiently 
-          identify, assess, and mitigate risks while maintaining compliance with regulatory standards. 
+          our expertise to Public (Government) and Private sectors & establishing the trust among them. Our solutions 
+          can be integrated advanced AI System and  ensuring that your businesses can work more efficiently. Further,
+          we are available to provide the services of risk management that includes to
+          identify, assess, and mitigate risks of your process and 
+          enable compliances with regulatory standards. 
           
         </h5>
         <h5 class="text-white1  fs-6 fw-light pe-lg-3  pt-lg-2">
