--- a/contact.html
+++ b/contact.html
@@ -272,9 +272,7 @@
     class="container-fluid d-flex flex-lg-row py-5   text-white1 align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
     <div class="d-flex flex-lg-row flex-column align-items-lg-center ">
       <h2 class="strk text-start position-relative ">Contact
-        Us <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6" viewBox="0 0 50 6">
-          <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
-        </svg></span></h2>
+        Us</span></h2>
 
 
     </div>
