--- a/about.html
+++ b/about.html
@@ -269,28 +269,9 @@
     <div class="col-12 mx-auto d-flex justify-content-start flex-column  ">
         <div class="d-flex col-12 flex-row justify-content-start pt-5 ">
             <p class="pe-5 ">
- <svg xmlns="http://www.w3.org/2000/svg" width="50" class="arr" height="6"
-                viewBox="0 0 50 6">
-                <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
-              </svg>
+
             </p>
-            <span class=""><svg class="star" xmlns="http://www.w3.org/2000/svg" width="45" height="20" viewBox="0 0 45 36">
-                <path
-                  d="M41.0654 13.6409C35.2972 11.1608 31.0569 6.12526 29.8727 0C28.6885 6.12526 24.4483 11.1608 18.68 13.6409C17.5722 14.1294 14.7454 14.881 14.7454 14.881C14.7454 14.881 17.534 15.6326 18.68 16.1211C24.4483 18.6013 28.6885 23.6743 29.8727 29.762C31.0569 23.6367 35.2972 18.6013 41.0654 16.1211C42.1732 15.6326 45 14.881 45 14.881C45 14.881 42.2114 14.1294 41.0654 13.6409Z">
-                </path>
-                <path
-                  d="M17.1903 26.4927C13.7523 25.0271 11.2693 22.0209 10.5435 18.4134C9.85588 22.0209 7.33466 25.0271 3.89663 26.4927C3.24722 26.7933 1.56641 27.2067 1.56641 27.2067C1.56641 27.2067 3.20902 27.6576 3.89663 27.9207C7.33466 29.3862 9.81768 32.3925 10.5435 36C11.2693 32.4301 13.7523 29.4238 17.1903 27.9582C17.8398 27.6576 19.5206 27.2443 19.5206 27.2443C19.5206 27.2443 17.8398 26.7933 17.1903 26.4927Z">
-                </path>
-                <path
-                  d="M44.3888 27.2443C44.3888 28.1086 43.663 28.785 42.8226 28.785C41.944 28.785 41.2563 28.071 41.2563 27.2443C41.2563 26.38 41.9822 25.7036 42.8226 25.7036C43.663 25.666 44.3888 26.38 44.3888 27.2443Z">
-                </path>
-                <path
-                  d="M15.3185 5.82463C15.3185 6.68893 14.5927 7.36534 13.7522 7.36534C12.8736 7.36534 12.186 6.65135 12.186 5.82463C12.186 4.96033 12.9118 4.28392 13.7522 4.28392C14.6309 4.28392 15.3185 4.96033 15.3185 5.82463Z">
-                </path>
-                <path
-                  d="M1.56621 16.4217C2.43121 16.4217 3.13243 15.7319 3.13243 14.881C3.13243 14.0301 2.43121 13.3403 1.56621 13.3403C0.701218 13.3403 0 14.0301 0 14.881C0 15.7319 0.701218 16.4217 1.56621 16.4217Z">
-                </path>
-              </svg></span>
+            <span class=""></span>
           </div>
       <h2 class="display-2 text-start head-1 col-12 ">Time and Scope Committments for Project Deliveries
       </h2>
@@ -306,10 +287,7 @@
   <!-- Who We Are start -->
   <div class="container-fluid mt-5 py-5 who d-flex flex-column justify-content-center align-items-center">
     <div class="container d-flex flex-lg-row flex-column py-5">
-      <p class="pe-5 fs-4 text-white col-lg-5">About-Us <svg xmlns="http://www.w3.org/2000/svg" width="50"
-          class="arr" height="6" viewBox="0 0 50 6">
-          <path d="M50 3L45 0.113249V5.88675L50 3ZM0 3.5H45.5V2.5H0V3.5Z"></path>
-        </svg></p>
+      <p class="pe-5 fs-4 text-white col-lg-5">About-Us </p>
       <h2 class="text-white col-lg-7 fs-6 text-end">
 
         We are highly passionate team of consultants that comprises of technologist, researchers 
